<resources>
    <string name="app_name">SmartParkingApp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="parking_lot_map">ParkingLotMap</string>
    <string name="parking_spaces_map">Parking Spaces Map</string>
    <string name="getRawValues">Button</string>
    <string name="get_raw_values">Get Raw Values</string>
    <string name="values">Values</string>
    <string name="retrieve_data_here">Retrieve Data Here</string>
    <string name="space_01">Space 01</string>
    <string name="space02">Space02</string>
    <string name="space03">Space03</string>
    <string name="space04">Space04</string>
    <string name="space05">Space05</string>
    <string name="space06">Space06</string>
    <string name="space07">Space07</string>
    <string name="map">Map</string>
    <string name="uhart_smart_parking_app">UHart Smart Parking App</string>
    <string name="open_parking_spots">Open Parking Spots</string>
    <string name="space01">Space01</string>
    <string name="parking_space_raw_data">Parking Space Raw Data</string>
    <string name="get_raw_data">Get Raw Data</string>
    <string name="ParkingLotImage">TODO</string>
    <string name="string_parkinglotimage">parking_lot_image</string>
    <string name="xmark7">xmark7</string>
    <string name="xmark3">xmark3</string>
    <string name="checkmark3">checkmark3</string>
    <string name="checkmark2">checkmark2</string>
    <string name="xmark2">xmark2</string>
    <string name="checkmark7">checkmark7</string>
    <string name="xmark6">xmark6</string>
    <string name="checkmark6">checkmark6</string>
    <string name="xmark5">xmark5</string>
    <string name="checkmark5">checkmark5</string>
    <string name="xmark4">xmark4</string>
    <string name="checkmark4">checkmark4</string>
    <string name="xmark1">xmark1</string>
    <string name="checkmark1">checkmark1</string>
    <string name="welcome_to_the_uhart_smart_parking_app_here_you_will_find_information_about_on_campus_parking_lot_availability">Welcome to the UHart Smart Parking App! Here you will find information about on-campus parking lot availability</string>
    <string name="settings">Settings</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="app_settings">App Settings</string>
    <string name="spacestate1">SpaceState1</string>
    <string name="uhart_pic">TODO</string>
    <string name="parkinglotmap">Parking Lot Map</string>
    <string name="notifications">Notifications</string>
</resources>